--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -1,3 +1,31 @@
-<div class="warp_main">
-	头部
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <title>爱卡汽车_中国领先的汽车主题社区、汽车资讯、汽车论坛中心</title>
+    <meta name="keywords" content="汽车,爱卡汽车网,汽车网,汽车报价,汽车图片,汽车社区,车友会,汽车论坛,汽车俱乐部,xcar" />
+    <meta name="description" content="爱卡汽车网为您提供最新汽车报价、汽车图片、车型资料、汽车论坛、汽车资讯信息,XCAR-爱卡汽车网是中国领先的汽车主题社区,其中包括85个主流品牌车型俱乐部,国内32个省市和地区分会,36个特色讨论区。" />
+    <link type="text/css" href="/dist/css/main.css" rel="stylesheet">
+    <link type="text/css" href="/dist/img/sprite2x/sprite2x.css" rel="stylesheet">
+    <!--[if IE 8]>
+     <link type="text/css" href="/dist/img/sprite/sprite.css" rel="stylesheet">
+    <script src='//asserts.xcarimg.com/resource/xMedia/js/libs/templateie/es5-shim.min.js'></script>
+    <script src='//asserts.xcarimg.com/resource/xMedia/js/libs/templateie/es5-sham.min.js'></script>
+    <script src='//asserts.xcarimg.com/resource/xMedia/js/libs/templateie/json3.min.js'></script>
+    <script src="//asserts.xcarimg.com/resource/xMedia/js/libs/ajaxie/jquery.xdomainrequest.min.js"></script>
+    <![endif]-->
+    
+    <script src="//asserts.xcarimg.com/resource/xMedia/js/libs/jquery-1.8.3.min.js"></script>
+    <script src="//asserts.xcarimg.com/resource/xMedia/js/libs/template-web.js"></script>
+    <script src="http://cstaticdun.126.net/load.min.js"></script>
+    <script>
+        (function () {
+            var _protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+            var _phref = "dw.xcar.com.cn/analytics.php?";
+            document.write(unescape("%3Cscript async src='" + _protocol + _phref + "' type='text/javascript'%3E%3C/script%3E"));
+
+        })()
+
+    </script>
+</head>
