--- a/src/css/reset.scss
+++ b/src/css/reset.scss
@@ -4,11 +4,14 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input
   border:0;
 }
 body{
-  font-family: 'Microsoft YaHei';
-  font-size: 12px;
-  color:#444;
-  background:#e6eaf0;
+  font-family: "Microsoft YaHei","PingFang SC","Arial";
+  font-size: 14px;
+  color:#181818;
+  background:#f8f8f8;
   overflow-x: hidden;
+}
+.none{
+  display: none;
 }
 /* #app{
   height: 100%;
@@ -17,8 +20,8 @@ html,body{height: 100%;}
 ol,ul li{list-style-type:none;}
 em,i,cite{font-style:normal;}
 fieldset,img{border:none; vertical-align:middle;}
-a{color:#444;text-decoration:none;}
-a:hover{ text-decoration:none; color: #3498db;}
+a{color:#181818 ;text-decoration:none;}
+a:hover{text-decoration:none;}
 .clear{clear:both;}
 .clearfix:after{clear:both; visibility:hidden;content:"";display:block;font-size:0;height:0;}
 * html .clearfix{height:1%}
@@ -30,3 +33,23 @@ select,
 input,
 textarea {vertical-align: middle;outline: none;resize: none;}
 ::-ms-clear { display: none; }
+
+:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: #c0c4cc;
+}
+::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: #c0c4cc;
+}
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  color: #c0c4cc;
+}
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  color: #c0c4cc;
+}
+.none{
+  display: none;
+}
