--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -1,24 +1,94 @@
-<div class="footer">
-	
-	<div class="footer_nt martop10">
-		<p>
-			<a target="_blank" href="http://www.xcar.com.cn/about/us/">关于爱卡</a>|<a target="_blank" href="http://www.xcar.com.cn/about/job/">招贤纳士</a>|<a target="_blank" href="http://www.xcar.com.cn/about/contact/">联系我们</a>|<a target="_blank" href="http://www.xcar.com.cn/about/links/">友情链接</a>|<a target="_blank" href="http://newcar.xcar.com.cn/price/">选车中心</a>|<a target="_blank" href="http://club.xcar.com.cn/">汽车论坛</a>|<a target="_blank" href="http://www.xcar.com.cn/about/sitemap/">站点地图</a>|<a target="_blank" href="http://www.xcar.com.cn/tag/169187.html">防诈骗技巧</a>|<a href="http://www.xcar.com.cn/chezhan/shanghai/" target="_blank">上海车展</a>|<a href="http://www.xcar.com.cn/chezhan/beijing/" target="_blank">北京车展</a>|<a href="http://www.xcar.com.cn/chezhan/guangzhou/" target="_blank">广州车展</a>|<a target="_blank" href="http://dw.xcar.com.cn/adcount.php?id=178">手机爱卡</a>
-			 <br><a href="http://www.xcar.com.cn/about/telecom/" target="_blank">电信与信息服务业务经营许可证：京ICP证161398号</a><a href="http://www.xcar.com.cn/about/media/" target="_blank">信息网络传播视听节目许可证0110552号</a> <a href="http://www.xcar.com.cn/about/produce/" target="_blank">广播电视节目制作经营许可证书13223号</a>电话：010-82616677
-				 <br><a href="http://www.miibeian.gov.cn" target="_blank">京ICP备09041801号-119</a> <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802023251" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://pic.xcarimg.com/img/07news/2017/04/21/457569f0a77c57f56dbc337a1ead2f68.png" style="float:left;">京公网安备 11010802023251号</a><a target="_blank" href="http://www.xcar.com.cn/register/terms.htm">用户服务协议</a><a target="_blank" href="http://www.xcar.com.cn/register/yinsi.htm">隐私权声明</a>京网文〔2018〕1075-114号<br>互联网违法和不良信息举报方式：电话：400-678-0116  邮箱：complaint@xcar.com.cn<a class="report" target="_blank" href="http://report.12377.cn:13225/toreportinputNormal_anis.do">网上有害信息举报专区</a><a href="http://www.xcar.com.cn/about/internet/" target="_blank">中国互联网协会会员单位</a>
-			<br>©2002-2019 www.xcar.com.cn All rights reserved. 北京智德典康电子商务有限公司（爱卡汽车） 版权所有.
-		</p>
-	
-		<div style="text-align: center; padding-top: 20px">
-			<a href="http://www.hd315.gov.cn/beian/view.asp?bianhao=010202001021500016" target="_blank" style="margin-right:10px;">
-				<img src="http://icon.xcar.com.cn/2015/index/pic/proposal.jpg?v23243">
-			</a>
-			<a href="http://www.12377.cn/" target="_blank" style="margin-right:10px;">
-				<img src="http://icon.xcar.com.cn/2016/images/report.jpg">
-			</a>
-			<a href="http://www.12377.cn/node_548446.htm" target="_blank" style="margin-right:10px;">
-				<img src="http://icon.xcar.com.cn/2016/images/app.jpg?v=123">
-			</a>
-		</div>
-	</div>
-</div>
-
+<style>
+        .content_nt {
+            margin: 0 auto;
+            width: 1200px;
+        }
+        .mar_top8 {
+            margin-top: 8px;
+        }
+        .footer_nt {
+            clear: both;
+            color: #666;
+            text-align: center;
+            line-height: 22px;
+            font-family: arial,SimSun;
+        }
+        </style>
+        <script type="text/javascript">var jqueryname = $;</script>
+        <script src="//js.xcar.com.cn/tools/public_func.js"></script>
+        <script src="//asserts.xcarimg.com/resource/common/xlogin_box_utf.js?v=201901071324"></script>
+        <div class="content_nt mar_top8">
+            <div class="footer_nt">
+                <p><a href="http://www.xcar.com.cn/about/us/" target="_blank">关于爱卡</a>|<a href="http://www.xcar.com.cn/about/job/"
+                        target="_blank">招贤纳士</a>|<a href="http://www.xcar.com.cn/about/contact/" target="_blank">联系我们</a>|<a
+                        href="http://www.xcar.com.cn/about/links/" target="_blank">友情链接</a>|<a href="//newcar.xcar.com.cn/"
+                        target="_blank">选车中心</a>|<a href="//newcar.xcar.com.cn/photo/" target="_blank">汽车图片</a>|<a href="//club.xcar.com.cn/"
+                        target="_blank">汽车论坛</a>|<a href="http://www.xcar.com.cn/about/sitemap/" target="_blank">站点地图</a>|<a
+                        href="//my.xcar.com.cn/total_station_feedback.php" target="_blank">意见反馈</a>|<a href="http://www.xcar.com.cn/chezhan/beijing/"
+                        target="_blank">北京车展</a>|<a href="http://www.xcar.com.cn/chezhan/guangzhou/" target="_blank">广州车展</a>|<a
+                        href="//dw.xcar.com.cn/adcount.php?id=178" target="_blank">手机爱卡</a><br />&copy;2002-2019
+                    www.xcar.com.cn All rights reserved. 北京智德典康电子商务有限公司（爱卡汽车） 版权所有.<input type="hidden" id="ICP" value="京ICP证：010391 号" />&nbsp;
+                    电话：010-82616677 <br /><a target="_blank" href="//www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802023251"
+                        style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="//pic.xcarimg.com/img/07news/2017/04/21/457569f0a77c57f56dbc337a1ead2f68.png"
+                            style="float:left;" />京公网安备 11010802023251号</a><a href="http://www.xcar.com.cn/register/terms.htm"
+                        target="_blank">用户服务协议</a><a href="http://www.xcar.com.cn/register/yinsi.htm" target="_blank">隐私权声明</a>
+                    <br />互联网违法和不良信息举报方式：电话：400-678-0116 邮箱：complaint@xcar.com.cn</p>
+            </div>
+        </div>
+        <script src="//js.xcar.com.cn/login/msg.js"></script>
+        <script src="//js.xcar.com.cn/login/header2015.js?d=0814"></script>
+        
+        <script>
+            jqueryname("#xlogin").live("click", function () {
+                jqueryname(".login").xLoginBox({
+                    func: function () {
+                        jqueryname("#xlogininfo").attr("style", "");
+                        callLoginScript.call(null);
+                        reloadMsgInfo.call(null);
+                    },
+                    args: [],
+                    show: true
+                });
+            });
+        </script>
+        <script type="text/javascript" src="//msg.xcar.com.cn/newpop/msg_tip_new_forbbs.php?type=cms"></script>
+        <script>
+            (function (G, D, s, c, p) {
+                c = { //监测配置
+                    UA: "UA-xcar-000001", //客户项目编号,由系统生成
+                    NO_FLS: 1,
+                    WITH_REF: 1,
+                    URL: '//asserts.xcarimg.com/resource/common/statistic/iwt-min.js' //iwt.js的URL位置，请客户自行托管JS文件，只需修改此值
+                };
+                G._iwt ? G._iwt.track(c, p) : (G._iwtTQ = G._iwtTQ || []).push([c, p]), !G._iwtLoading && lo();
+        
+                function lo(t) {
+                    G._iwtLoading = 1;
+                    s = D.createElement("script");
+                    s.src = c.URL;
+                    t = D.getElementsByTagName("script");
+                    t = t[t.length - 1];
+                    t.parentNode.insertBefore(s, t);
+                }
+            })(this, document); 
+        </script>
+        <script src="//js.xcar.com.cn/source/info/js/clearCookie.js?t=0627" type="text/javascript"></script>
+        <script type="text/javascript">
+            var _bdhmProtocol = (("http:" == document.location.protocol) ? " http://" : " https://");
+            document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F53eb54d089f7b5dd4ae2927686b183e0' type='text/javascript'%3E%3C/script%3E"));
+        </script>
+        <script>
+            (function () {
+                var bp = document.createElement('script');
+                var curProtocol = window.location.protocol.split(':')[0];
+                if (curProtocol === "https") {
+                    bp.src = "https://zz.bdstatic.com/linksubmit/push.js";
+                } else {
+                    bp.src = "http://push.zhanzhang.baidu.com/push.js";
+                }
+        
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(bp, s);
+            })();
+        </script>
+        
